--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,17 @@
     </header>
     <main>
         <h1>Общее меню</h1>
-        <ul>
-            <li>
-
-            </li>
+     <section height=100vh id="but">
+         <ul class="list">
+            <li><button class="btn" type="button">Все</button></li>
+            <li><button class="btn" type="button">Веб-сайты</button></li>
+            <li><button class="btn" type="button">Приложения</button></li>
+            <li><button class="btn" type="button">Дизайн</button></li>
+            <li><button class="btn" type="button">Маркетинг</button></li>
         </ul>
 
+
+    </section>
     </main>
 
 
