--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
 <body>
     <header>
-        <a href="/goit-markup-hw-01/index.htm">WebStudio</a>
+        <a href="index.htm">WebStudio</a>
         <nav class="navigation">
             <ul class="list">
-                <li class="item"><a class="link" href="/goit-markup-hw-01/index.htm">Студия</a></li>
+                <li class="item"><a class="link" href="index.htm">Студия</a></li>
                 <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li class="item"><a class="link" href="#">Контакты</a></li>
             </ul>
@@ -23,34 +24,82 @@
         </ul>
     </header>
     <main>
-        <h1>Общее меню</h1>
-     <section height=100vh id="but">
-         <ul class="list">
+       
+       <section>
+            <h1>Фильтр</h1>
+        <!--Controls buttoms-->
+         <ul class="listbtn">
             <li><button class="btn" type="button">Все</button></li>
             <li><button class="btn" type="button">Веб-сайты</button></li>
             <li><button class="btn" type="button">Приложения</button></li>
             <li><button class="btn" type="button">Дизайн</button></li>
             <li><button class="btn" type="button">Маркетинг</button></li>
         </ul>
-
-
     </section>
-    </main>
+   
+    <section>
+        <h2>Сортировочное окно</h2>
+        <ul class="list">
+            <li class="item">
+                <img src="./images/computer.jpg" alt="Компьютер" wight="370">
+                <h3 class="link-title">Технокряк</h3>
+                <p class="descripion">Веб-сайт </p>
+            </li>
+            <li class="item">
+                <img src="./images/poster.jpg" alt="два баскетболиста , мяч " wight="370">
+                <h3 class="link-title">Постер New Orlean vs Golden Star</h3>
+                <p class="descripion">Дизайн</p>
+            </li>
+            <li class="item">
+                <img src="./images/seafood.jpg" alt="логотип рыба , название ресторана " wight="370">
+                <h3 class="link-title">Ресторан Seafood</h3>
+                <p class="descripion">Приложение</p>
+            </li>
+            <li class="item">
+                <img src="./images/4.jpg" alt="наушники" wight="370">
+                <h3 class="link-title">Проект Prime</h3>
+                <p class="descripion">Маркетинг</p>
+            </li>
+            <li class="item">
+                <img src="./images/5.jpg" alt="коробка белая , коробка коричневая " wight="370">
+                <h3 class="link-title">Проект Boxes</h3>
+                <p class="descripion">Приложение </p>
+            </li>
+            <li class="item">
+                <img src="./images/6.jpg" alt="монитор" wight="370">
+                <h3 class="link-title">Inspiration has no Borders</h3>
+                <p class="descripion">Веб-сайт</p>
+                </li>
+            <li class="item">
+                    <img src="./images/7.jpg" alt="открытая книга" wight="370">
+                    <h3 class="link-title">Издание Limited Edition</h3>
+                    <p class="descripion">Дизайн</p>
+                </li>
+            <li class="item">
+                    <img src="./images/8.jpg" alt="бирка" wight="370">
+                    <h3 class="link-title">Проект LAB</h3>
+                    <p class="descripion">Маркетинг</p>
+                </li>
+            <li class="item">
+                    <img src="./images/9.jpg" alt="ноутбук" wight="370"></li>
+                   <li><h3 class="link-title">Growing Business</h3>
+                    <p class="descripion">Приложение</p>
+                </li>
+            </ul>
+      </section>
+    </main>  
 
-
-<footer>
-    <a href="/goit-markup-hw-01/index.htm">WebStudio</a>
-    <address>
-
-        <ul>
-            <li> <a
-                    href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.Киев,
-                    пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </address>
-</footer>
+  <footer>
+        <a href="./index.htm">WebStudio</a>
+        <address>
+           
+            <ul>
+                <li> <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 </body>
-
+ 
 </html>
