--- a/portfolio.html
+++ b/portfolio.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <header>
-        <a href="index.htm">WebStudio</a>
-        <nav class="navigation">
-            <ul class="list">
-                <li class="item"><a class="link" href="index.htm">Студия</a></li>
+        <a href="index.html">WebStudio</a>
+        <nav>
+            <ul class="site-nav">
+                <li class="item"><a class="link" href="index.html">Студия</a></li>
                 <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li class="item"><a class="link" href="#">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="auth-nav">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -90,7 +90,7 @@
     </main>  
 
   <footer>
-        <a href="./index.htm">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <address>
            
             <ul>
