--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
         <a href="index.html">WebStudio</a>
-        <nav>
+          <nav>
             <ul class="site-nav">
                 <li class="item"><a class="link" href="index.html">Студия</a></li>
                 <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
