--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <a href="./index.html">WebStudio</a>  
     <nav class="navigation">
         <ul class="list">
-           <li class="item"><a class="link" href="/index.html">Студия</a></li>
-           <li class="item"><a class="link" href="/portfolio.html">Портфолио</a></li>
+           <li class="item"><a class="link" href="./index.html">Студия</a></li>
+           <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
            <li class="item"><a class="link" href="#">Контакты</a></li>
         </ul>
     </nav>
