--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>  
 <header>
-  <a href="./index.html">WebStudio</a>  
-    <nav class="navigation">
-        <ul class="list">
-           <li class="item"><a class="link" href="./index.html">Студия</a></li>
-           <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-           <li class="item"><a class="link" href="#">Контакты</a></li>
+<a href="index.html" class="logo"><span class="acent-logo">Web</span>Studio</a>
+    <nav class="nav-page">
+        <ul class="site-nav">
+            <li class="item"><a class="link current" href="index.html">Студия</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li class="item"><a class="link" href="#">Контакты</a></li>
         </ul>
     </nav>
-       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
-       </ul>
+    <ul class="auth-nav">
+        <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item"><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
+    </ul>
 </header>
   <main>  
     <section>
@@ -64,32 +67,32 @@
              <li> 
                   <img src="./image/img4.jpg" alt="avatar" width="270">
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p class="descripion">Product Designer</p>
                     </li>
             <li>  
               <img src="./image/img5.jpg" alt="avatar" width="270">
               <h3>Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <p class="descripion">Frontend Developer</p>
            </li>
             <li>
                 <img src="./image/img6.jpg" alt="avatar" width="270">
                 <h3>Николай Тарасов</h3>
-                 <p>Marketing</p>
+                 <p class="descripion">Marketing</p>
             </li>
             <li>
                 <img src="./image/img7.jpg" alt="avatar" width="270">
                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <p class="descripion">UI Designer</p>
             </li>
            </ul>
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="index.html" class="logo"><span class="acent-logo">Web</span>Studio</a>
         <address>
            
             <ul>
-                <li> <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="item-map"> <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
             </ul>
