обесцветил заголовки не нужные

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <main class="main">
        
        <section class="section-main">
-            <h1>Фильтр</h1>
+            <h1 class="wh">Фильтр</h1>
         <!--Controls buttoms-->
          <ul class="list-btn">
             <li><button class="btn" type="button">Все</button></li>
@@ -41,7 +41,7 @@
             <li><button class="btn" type="button">Маркетинг</button></li>
         </ul>
    
-        <h2>Сортировочное окно</h2>
+        <h2 class="wh">Сортировочное окно</h2>
         <ul class="list">
             <li class="item">
                 
