добавлен курсор поинтер для кнопок допилен в футере цвет .ФИНИШ ДЗ2

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="index.html" class="logo"><span class="acent-logo">Web</span>Studio</a>
+        <a href="index.html" class="logo logo-footer"><span class="acent-logo">Web</span>Studio</a>
         <address>
            
             <ul class="footer-list">
