--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
     </main>  
 
   <footer class="footer">
-        <a href="index.html" class="logo"><span class="acent-logo">Web</span>Studio</a>
+        <a href="index.html" class="logo logo-footer"><span class="acent-logo">Web</span>Studio</a>
         <address class="adress">
            
             <ul class="footer-list">
