--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body-list">  
-<header class="header-list">
+<header class="header-list">   
 <a href="index.html" class="logo"><span class="acent-logo">Web</span>Studio</a>
     <nav class="nav-page">
         <ul class="site-nav">
@@ -53,7 +53,7 @@
                  </ul>
              </section> 
              <section>
-                <h2 class="text-section">Чем мы занимаемся</h2>
+                <h2 class="text-section-st">Чем мы занимаемся</h2>
                 <ul class="list">
                     <li><img src="./image/img1.jpg" alt=" клавиатура , руки , планшет , монитор,ручка ,тетрадь,комьютерная мышь , лист "
                             width="370" /> </li>
@@ -66,7 +66,7 @@
             
        
       <section class="team">
-          <h2 class="text-section">Наша команда</h2>
+          <h2 class="text-section-st">Наша команда</h2>
            <ul class="list">
              <li> 
                   <img src="./image/img4.jpg" alt="avatar" width="270">
@@ -102,6 +102,7 @@
             </ul>
         </address> 
     </footer>
+   
 </body>
  
 </html>
