остановка на чем міі занимаемся

--- a/index.html
+++ b/index.html
@@ -36,21 +36,23 @@
       
             <section class="benefits">
                 <h2 class="text-section"> Наши приемущества</h2>
+                <div class="container">
                 <ul class="list">
-                 <li><h3 class="section-list">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                 <li class="li"><h3 class="section-list">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                  <p class="list-list">Идейные соображения, а такженачало повседневной работы по формированию позиции.</p>
                  </li>
-                 <li><h3 class="section-list">ПУНКТУАЛЬНОСТЬ</h3>
+                 <li class="li"><h3 class="section-list">ПУНКТУАЛЬНОСТЬ</h3>
                   <p class="list-list">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                  </li>
-                <li><h3 class="section-list">ПЛАНИРОВАНЕИ</h3>
+                <li class="li"><h3 class="section-list">ПЛАНИРОВАНЕИ</h3>
                     <p class="list-list">Равным образом консультация с широким активом в значительной степени обуславливает. </p>
 
                  </li>
-                <li><h3 class="section-list">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                <li class="li"><h3 class="section-list">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="list-list">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                  </li>
                  </ul>
+                </div>
              </section> 
              <section>
                 <h2 class="text-section-st">Чем мы занимаемся</h2>
