не раставил чем занимаемся команду футер , также на порт разметсил по 3 но надо удалять марженті

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
 
 <body class="body-list">
     <header class="header-list">
+        <div class="container nav">
         <a href="/index.html" class="logo"><span class="acent-logo">Web</span>Studio</a>
         <nav class="nav-page">
             <ul class="site-nav">
@@ -28,6 +29,7 @@
             <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="item"><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
     <main class="main">
        
@@ -41,9 +43,9 @@
             <li><button class="btn" type="button">Дизайн</button></li>
             <li><button class="btn" type="button">Маркетинг</button></li>
         </ul>
-   
+        <div class="menu">
         <h2 class="wh">Сортировочное окно</h2>
-        <ul class="list">
+        <ul class="filt">
             <li class="item">
                 
                 <img src="./images/computer.jpg" alt="Компьютер" wight="370">
@@ -92,6 +94,7 @@
                     <p class="descripion">Приложение</p>
                 </li>
             </ul>
+            </div>
       </section>
     </main>  
 
