Вроде как финиш

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,13 @@
             <h1 class="wh">Фильтр</h1>
         <!--Controls buttoms-->
          <ul class="list-btn">
-            <li><button class="btn" type="button">Все</button></li>
-            <li><button class="btn" type="button">Веб-сайты</button></li>
-            <li><button class="btn" type="button">Приложения</button></li>
-            <li><button class="btn" type="button">Дизайн</button></li>
-            <li><button class="btn" type="button">Маркетинг</button></li>
+            <li class="libt"><button class="btn" type="button">Все</button></li>
+            <li class="libt"><button class="btn" type="button">Веб-сайты</button></li>
+            <li class="libt"><button class="btn" type="button">Приложения</button></li>
+            <li class="libt"><button class="btn" type="button">Дизайн</button></li>
+            <li class="libt"><button class="btn" type="button">Маркетинг</button></li>
         </ul>
-        <div class="menu">
+        <div class="container">
         <h2 class="wh">Сортировочное окно</h2>
         <ul class="filt">
             <li class="item">
@@ -89,8 +89,8 @@
                     <p class="descripion">Маркетинг</p>
                 </li>
             <li class="item">
-                    <img src="./images/9.jpg" alt="ноутбук" wight="370"></li>
-                   <li><h2 class="link-title">Growing Business</h2>
+                    <img src="./images/9.jpg" alt="ноутбук" wight="370">
+                    <h2 class="link-title">Growing Business</h2>
                     <p class="descripion">Приложение</p>
                 </li>
             </ul>
